--- a/templates/analysis/ITS5-ITS4/config.yaml
+++ b/templates/analysis/ITS5-ITS4/config.yaml
@@ -3,7 +3,7 @@ cores: 4
 demultiplex:
   primer_max_err: 0.2
   idx_max_diffs: 0
-  min_read_length: 200
+  min_barcode_length: 200
   error_threshold: 2.5
 
 taxonomy:
@@ -14,6 +14,4 @@ taxonomy:
       family:
         - Aspergillaceae
         - Capnodiaceae
-      genus:
-        - Vishniacozyma
     kingdom: Fungi
