Refactor clustering code
- two different clustering threshold settings
  for fixed-threshold read clustering and sequence grouping
  by putative taxon
- rename some output columns
- allow specifying a custom temporary directory
- run sequence clustering by taxon on consensus
  instead of reference sequences
- repeatedly re-run mapping to consensus in
  case of inconsistencies
- better naming of final sequences (also in BAM files thanks
  to 'samtools reheader')
- small fix in automatic taxa ranking code (contamination
  recognition): rank by total taxon abundance, not
  average from all sequences of a taxon
  (was inconsistent between clustering and taxonomy
  ranking code)

--- a/templates/analysis/config.commented.yaml
+++ b/templates/analysis/config.commented.yaml
@@ -2,6 +2,12 @@
 # (more = faster, but more memory;  for clustering the usage can sometimes be 3GB per core)
 cores: 4
 
+# Temporary directory for short-lived files created during the clustering process.
+# If the 'analysis' directory is on a slow filesystem (e.g. HDD), setting
+# 'tmp_dir' to a location on a fast SSD or even RAM (e.g. https://en.wikipedia.org/wiki/Tmpfs)
+# may considerably speed up the process
+tmp_dir: /run/user/1000/dada-ont-barcoding
+
 # Sample de-multiplexing
 # (search and remove primers + sample indexes, filter by quality)
 demultiplex:
