--- a/templates/analysis/ITS5-ITS4/config.yaml
+++ b/templates/analysis/ITS5-ITS4/config.yaml
@@ -6,6 +6,9 @@ demultiplex:
   min_barcode_length: 200
   error_threshold: 2.5
 
+cluster:
+  tmp_dir: /run/user/1000/dada-ont-barcoding
+
 taxonomy:
     # UNITE database (https://doi.org/10.15156/BIO/3301243, all Eukaryotes, QIIME-formatted)
     db_url: https://s3.hpc.ut.ee/plutof-public/original/0ee4ff53-bd04-454b-a937-af1f466bfe8b.tgz
