Convert to an R package called "DadaNanoBC"
- restructured pipeline configuration
- public functions documented/adjusted
- simplified fix_homopolymers; avoid modification
   of consensus in unclear cases
- programs need to be in PATH or
  their path provided with options()

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
 _*
-*~
-*.pdf
-*.Rproj
 !_targets.R
-
-analysis.html
-analysis.pdf
-/analysis/
-!/analysis/templates/*
-tmp/
-
-bin/
+*~
 taxdb/
 site/
-.R*
-.venv/
+vignettes/*.html
+vignettes/*.pdf
+docs/
+man/
 .Rproj.user
-.temp*
+.Rhistory
+.RData
+.Ruserdata
+.venv/
