--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(dada_learn_errors)
 export(do_assign_compare_taxonomy)
 export(do_assign_taxonomy)
 export(do_combine_alignments)
-export(do_compare_morpho_taxonomy)
+export(do_compare_taxonomy)
 export(do_demux)
 export(do_infer_all_barcodes)
 export(do_primer_search)
