Improve ergonomy, commit _targets.R, etc.
* inst/templates/_targets.R was ignored previously
  It has been substantially improved to correctly
  trigger recalculation after config changes
* improve configuration with better temporary
  data location handling
* fix parallel processing in do_infer_all_barcodes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,14 +14,14 @@ export(do_infer_all_barcodes)
 export(do_primer_search)
 export(do_trim_demux)
 export(get_gbif_taxa)
-export(infer_barcodes)
+export(infer_barcode)
 export(init_pipeline)
 export(load_taxdb)
 export(parse_primer_tab)
 export(parse_sample_tab)
 export(read_xlsx_primer_tab)
 export(read_xlsx_sample_tab)
-export(set_program_path)
+export(set_global_opts)
 importFrom(openxlsx2,int2col)
 importFrom(openxlsx2,wb_color)
 importFrom(openxlsx2,wb_comment)
